add default sorting by project code